# sdic

./: .cvsignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  autogen.sh  configure  configure.in  install.el  install.el.in
contrib/: edict.perl  eijirou.perl  gene.perl  jgene.perl
lisp/: .cvsignore  Makefile.am  Makefile.in  elisp-comp  lp.el  sample.emacs.in  sdic-array.el  sdic-compat.el  sdic-gene.el  sdic-grep.el  sdic-sgml.el  sdic.el.in  sdicf-client.el  sdicf.el  stem.el
texi/: sdic.texi
