AC_INIT(lisp/stem.el)
AM_INIT_AUTOMAKE(sdic, 2.1-beta3)

AM_PATH_LISPDIR

AC_PATH_PROG(NKF, nkf, no)
if test "$NKF" = "no"; then
    AC_MSG_WARN(nkf not found)
fi

AC_PATH_PROG(PERL, perl, no)
if test "$PERL" = "no"; then
    AC_MSG_WARN(perl not found)
fi

AC_PATH_PROG(GZIP, gzip, no)
if test "$GZIP" = "no"; then
    AC_MSG_WARN(gzip not found)
fi

AC_PATH_PROG(BZIP2, bzip2, no)
if test "$BZIP2" = "no"; then
    AC_MSG_WARN(bzip2 not found)
fi

AC_PATH_PROG(CP, cp, no)
if test "$CP" = "no"; then
    AC_MSG_WARN(cp not found)
fi

AC_PATH_PROG(SORT, sort, no)
if test "$SORT" = "no"; then
    AC_MSG_WARN(sort not found)
fi


DICTDIR=/usr/local/share/dict
AC_ARG_WITH(
        dictdir,
        [  --with-dictdir=DIR      dictionary files go to DIR [/usr/local/share/dict]],
        DICTDIR=$with_dictdir,
)
AC_SUBST(DICTDIR)

DICTTYPE=sdic
AC_ARG_WITH(
        dicttype,
        [  --with-dicttype=TYPE    use TYPE of dictionaries (sdic|dic) [sdic]],
        DICTTYPE=$with_dicttype,
)

EIJIROU_DIR="./eijirou"
AC_ARG_WITH(
        eijirou,
        [  --with-eijirou=DIR      eijirou files are in DIR [./eijirou]],
        EIJIROU_DIR=$with_eijirou,
)

WAEIJIROU_DIR="./waeijirou"
AC_ARG_WITH(
        waeijirou,
        [  --with-waeijirou=DIR    waeijirou files are in DIR [./waeijirou]],
        WAEIJIROU_DIR=$with_waeijirou,
)


EIWA_DICT=
AC_MSG_CHECKING(for EIWA Dictionary)
for dict in gene.sdic ejdict.sdic eijirou.sdic \
	    gene.dic  ejdict.dic  eijirou.dic ; do
	if test -f "$DICTDIR/$dict"; then
		EIWA_DICT="$dict"
		EIWA_DICT_PATH="$DICTDIR/$dict"
		AC_MSG_RESULT($EIWA_DICT_PATH (already installed))
		break
	fi
done

if test -z "$EIWA_DICT"; then
	if test -f gene95.lzh -o -f gene95.tar.gz -o -f gene95.tar.bz2; then
		EIWA_DICT="gene.$DICTTYPE"
		EIWA_DICT_PATH="$DICTDIR/$EIWA_DICT"
		AC_SUBST(EIWA_DICT)
		AC_SUBST(EIWA_DICT_PATH)
		AC_MSG_RESULT($EIWA_DICT)
	elif test -f edict.gz -o -f edict.bz2; then
		EIWA_DICT="ejdict.$DICTTYPE"
		EIWA_DICT_PATH="$DICTDIR/$EIWA_DICT"
		AC_SUBST(EIWA_DICT)
		AC_SUBST(EIWA_DICT_PATH)
		AC_MSG_RESULT($EIWA_DICT)
	elif test -d "$EIJIROU_DIR"; then
		EIWA_DICT="eijirou.$DICTTYPE"
		EIWA_DICT_PATH="$DICTDIR/$EIWA_DICT"
		AC_SUBST(EIWA_DICT)
		AC_SUBST(EIWA_DICT_PATH)
		AC_SUBST(EIJIROU_DIR)
		AC_MSG_RESULT($EIWA_DICT)
	else
		AC_MSG_RESULT(no)
	fi
fi

WAEI_DICT=
AC_MSG_CHECKING(for WAEI Dictionary)
for dict in jedict.sdic jgene.sdic waeijirou.sdic \
	    jedict.dic  jgene.dic  waeijirou.dic; do
	if test -f "$DICTDIR/$dict"; then
		WAEI_DICT="$dict"
		WAEI_DICT_PATH="$DICTDIR/$dict"
		AC_MSG_RESULT($WAEI_DICT_PATH (already installed))
		break
	fi
done

if test -z "$WAEI_DICT"; then
	if test -f edict.gz -o -f edict.bz2; then
		WAEI_DICT="jedict.$DICTTYPE"
		WAEI_DICT_PATH="$DICTDIR/$WAEI_DICT"
		AC_SUBST(WAEI_DICT)
		AC_SUBST(WAEI_DICT_PATH)
		AC_MSG_RESULT($WAEI_DICT)
	elif test -f gene95.lzh -o -f gene95.tar.gz -o -f gene95.tar.bz2; then
		WAEI_DICT="jgene.$DICTTYPE"
		WAEI_DICT_PATH="$DICTDIR/$WAEI_DICT"
		AC_SUBST(WAEI_DICT)
		AC_SUBST(WAEI_DICT_PATH)
		AC_MSG_RESULT($WAEI_DICT)
	elif test -d "$WAEIJIROU_DIR"; then
		WAEI_DICT="waeijirou.$DICTTYPE"
		WAEI_DICT_PATH="$DICTDIR/$WAEI_DICT"
		AC_SUBST(WAEI_DICT)
		AC_SUBST(WAEI_DICT_PATH)
		AC_SUBST(WAEIJIROU_DIR)
		AC_MSG_RESULT($WAEI_DICT)
	else
		AC_MSG_RESULT(no)
	fi
fi

AC_OUTPUT(Makefile lisp/Makefile lisp/sdic.el lisp/sample.emacs install.el)

